--- a/feature-album-detail/src/main/res/layout/fragment_album_details.xml
+++ b/feature-album-detail/src/main/res/layout/fragment_album_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.incentro.feature_album_detail.ui.AlbumDetailsFragment">
+    tools:context="com.incentro.feature_album_detail.ui.fragment.AlbumDetailsFragment">
 
     <TextView
         android:id="@+id/textview_second"
