--- a/feature-album-detail/src/main/res/navigation/graph_album_details.xml
+++ b/feature-album-detail/src/main/res/navigation/graph_album_details.xml
@@ -7,12 +7,16 @@
 
     <fragment
         android:id="@+id/AlbumDetailsFragment"
-        android:name="com.incentro.feature_album_detail.ui.AlbumDetailsFragment"
+        android:name="com.incentro.feature_album_detail.ui.fragment.AlbumDetailsFragment"
         android:label="@string/album_details_fragment_label"
         tools:layout="@layout/fragment_album_details">
         <deepLink
             android:id="@+id/deepLink"
             app:uri="@string/deeplink_album_details" />
+        <argument
+            android:name="id"
+            android:defaultValue="-1"
+            app:argType="integer" />
     </fragment>
 
 </navigation>
