--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Theme.MyPhotoAlbum" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.MyPhotoAlbum.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#6650A4</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.MyPhotoAlbum</item>
+    </style>
+
 </resources>
